# EveryDB

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  GEMINI.md  LICENSE  README.md  test_redis_variants.rs
.gemini/: settings.json
.githooks/: pre-push
.github/workflows/: ci.yml  package.yml  release.yml
crates/app/: Cargo.toml
crates/app/qml/: main.qml
crates/app/qml/components/: ConnectionBadge.qml  DataGrid.qml  StatusBar.qml  SyntaxEditor.qml
crates/app/qml/theme/: Theme.qml  Typography.qml
crates/app/qml/views/: ConnectionsView.qml  DataGridView.qml  MongoAggregateView.qml  MongoDocumentView.qml  QueryEditorView.qml  RedisKeyspaceView.qml  RedisPubSubView.qml  RedisQueueView.qml  SchemaExplorerView.qml
crates/app/src/: main.rs
crates/bridge/: Cargo.toml  build.rs
crates/bridge/src/: app_controller.rs  connection_model.rs  lib.rs  query_controller.rs  redis_model.rs  result_model.rs  schema_model.rs
crates/core/: Cargo.toml
crates/core/src/: capabilities.rs  connection.rs  driver.rs  error.rs  lib.rs  query.rs  schema.rs  value.rs
crates/drivers/mongodb/: Cargo.toml
crates/drivers/mongodb/src/: driver.rs  lib.rs  query.rs  schema.rs  types.rs
crates/drivers/postgres/: Cargo.toml
crates/drivers/postgres/src/: connection.rs  driver.rs  lib.rs  query.rs  schema.rs  types.rs
crates/drivers/postgres/tests/: integration_tests.rs
crates/drivers/redis/: Cargo.toml
crates/drivers/redis/src/: driver.rs  keyspace.rs  lib.rs  types.rs
crates/packaging/deb/: copyright  everydb.desktop
