[package]
name = "everydb-bridge"
version = "0.1.0"
edition = "2021"
authors = ["EveryDB Contributors <hello@everydb.dev>"]
license = "MIT"

[dependencies]
everydb-core = { path = "../core" }
everydb-postgres = { path = "../drivers/postgres" }
everydb-mongodb = { path = "../drivers/mongodb" }
everydb-redis = { path = "../drivers/redis" }
cxx = "1.0"
cxx-qt = "0.6"
cxx-qt-lib = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cxx-qt-build = "0.6"
