[package]
name = "everydb-core"
version = "0.1.0"
edition = "2021"
authors = ["EveryDB Contributors <hello@everydb.dev>"]
license = "MIT"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }
serde_json = "1.0"
