[package]
name = "everydb-mongodb"
version = "0.1.0"
edition = "2021"
authors = ["EveryDB Contributors <hello@everydb.dev>"]
license = "MIT"

[dependencies]
everydb-core = { path = "../../core" }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bson = "2.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
